// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Episode test suite should render 3 characteres 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ewqaQt"
  >
    <h2
      class="sc-gsnTZi gVnLhl"
    >
      Pilot
    </h2>
    <p
      class="sc-dkzDqf jXuBL"
    >
      Data de lançamento: 
    </p>
    <p
      class="sc-hKMtZM kycrHw"
    >
      December 2, 2013
    </p>
    <p
      class="sc-dkzDqf jXuBL"
    >
      Personagens: 
    </p>
    <p
      class="sc-hKMtZM kycrHw"
    >
      Rick Sanchez - Morty Smith - Bepisian
    </p>
  </div>
</DocumentFragment>
`;

exports[`Episode test suite should render only 11 characteres 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ewqaQt"
  >
    <h2
      class="sc-gsnTZi gVnLhl"
    >
      Pilot
    </h2>
    <p
      class="sc-dkzDqf jXuBL"
    >
      Data de lançamento: 
    </p>
    <p
      class="sc-hKMtZM kycrHw"
    >
      December 2, 2013
    </p>
    <p
      class="sc-dkzDqf jXuBL"
    >
      Personagens: 
    </p>
    <p
      class="sc-hKMtZM kycrHw"
    >
      Rick Sanchez - Morty Smith - Bepisian - Beth Smith - Canklanker Thom - Davin - Frank Palicky - Glenn - Hookah Alien - Jerry Smith - Jessica; +Mais
    </p>
  </div>
</DocumentFragment>
`;
